header, and ui home page done

--- a/src/component/CustomButton/CustomButton.module.css
+++ b/src/component/CustomButton/CustomButton.module.css
@@ -2,7 +2,7 @@
   font-size: 1em;
   background: #fff;
   color: palevioletred;
-  margin: 0.8em;
+  margin-left: 0.8em;
   padding: 0.25em 1em;
   border: 1px solid palevioletred;
   border-radius: 3px;
