--- a/src/component/Pokemon/Pokemon.module.css
+++ b/src/component/Pokemon/Pokemon.module.css
@@ -1,12 +1,16 @@
 .container{
-  background-color: rgba(255, 239, 213, 0.801);
   width: 100%;
   height: 100%;
 }
 .loading_container{
-  height: 100vh;
+  height: calc(100vh - 95px);
   display: block;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.pagination__area{
+  text-align: right;
+  margin-bottom: 30px;
+  padding: 0 1em;
 }
