--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 }
 
 body {
-  background-color: rgba(255, 239, 213, 0.801);
   font-family: 'Raleway', sans-serif;
+  background-color: #E8EAEE;
 }
 
 code {
@@ -16,3 +16,6 @@ code {
     monospace;
 }
 
+.content{
+  margin-top: 95px;
+}
