--- a/src/Grid/Grid.module.css
+++ b/src/Grid/Grid.module.css
@@ -4,7 +4,7 @@
   grid-template-rows: max-content;
   grid-auto-rows: max-content;
   grid-gap: 1.2em;
-  padding: 1em;
+  padding: 1em 5.5em;
   flex: 1;
   justify-content: center;
 }
@@ -14,4 +14,10 @@
   display: block;
   grid-column-start: 1;
   height: 1em;
+}
+
+@media (max-width: 600px) {
+  .grid__container{
+    padding: 1em 1em;
+  }
 }
