--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ code {
 .content{
   margin-top: 95px;
 }
+a{
+  text-decoration: none;
+  color: black;
+}
 
 @media (max-width: 600px) {
   .content { 
